add service layer

--- a/config/local.yaml
+++ b/config/local.yaml
@@ -1,6 +1,6 @@
 env: "local"
 storage_path: "./storage/auth.db"
-migrations_path: "./migrations"
+token_secret: "TEST"
 grpc:
   port: 44044
   timeout: 10h
